# IC

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  Nc_Mc_Wolf.m  Nctp_Mctp_Wolf.m  Nctr_Mctr_Wolf.m  OblqCalco.pas  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a.pas  cmake_install.cmake  concreto  concreto.cpp  config_build.txt  corte  corte.cpp  corte2  corte2.cpp  cortePoligono.cpp  cortePoligonoComprimido  cortePoligonoComprimido.cpp  corteSupInf.cpp  dados.json  data_storage.cpp  exemplo_classes.txt  graphical_template.sln  imgui.ini  log_resultados.txt  main  main.cpp  main.vcxproj  (+7 more)
include/: AnalyticalIntegration.h  AppController.h  AppView.h  ConcreteProperties.h  Interface.h  InternalForces.h  MomentCapacitySolver.h  MomentSolver.h  Point.h  Polygon.h  PolygonStressRegions.h  Reinforcement.h  Section.h  SteelProperties.h  combination.h  concreto.h  controller.h  data_storage.h  interfacePolygonRepository.h  model.h  point.h  poligono.h  polygon.h  polygonDto.h  polygonJSONRepository.h  reforco.h  view.h  window.h
src/: AnalyticalIntegration.cpp  AppController.cpp  AppView.cpp  ConcreteProperties.cpp  Interface.cpp  InternalForces.cpp  MomentCapacitySolver.cpp  MomentSolver.cpp  Point.cpp  Polygon.cpp  PolygonStressRegions.cpp  Reinforcement.cpp  Section.cpp  SteelProperties.cpp  combination.cpp  concreto.cpp  controller.cpp  getPolygonUseCase.cpp  main.cpp  model.cpp  point.cpp  (+5 more)
(+18 files in other folders)
